lib_LTLIBRARIES = libmathml.la

libmathml_la_SOURCES = mmlelement.cpp mmlnode.cpp mmldocument.cpp mmltext.cpp mmlmi.cpp mmlmn.cpp mmlmfrac.cpp mmlmo.cpp mmlmrow.cpp mmll_unit.cpp mmldict.cpp domstring.cpp mathcolor.cpp mmlmstyle.cpp mmlmsub.cpp mmlmsup.cpp mmlmsqrt.cpp mmlmroot.cpp mathml.cpp mathml2.cpp mathenums.cpp mmlmphantom.cpp attributechanges.cpp attributes.cpp paintersettings.cpp mmlmerror.cpp mmlmtext.cpp mmlmfenced.cpp mmlmsubsup.cpp mathcursor.cpp boundpoint.cpp mmlviewport.cpp nodegui.cpp constmathcursor.cpp mmlmath.cpp mmlmodict.cpp mmlmtable.cpp mmlmtr.cpp mmlmtd.cpp

libmathml_la_LDFLAGS = 
libmathml_la_LIBADD = 

noinst_HEADERS = attributechanges.h attributes.h boundpoint.h constmathcursor.h domstring.h elements.h mathcolor.h mathcursor.h mathenums.h mathml.h mathtypes.h mmldict.h mmldocument.h mmlelement.h mmll_unit.h mmlmath.h mmlmerror.h mmlmfenced.h mmlmfrac.h mmlmi.h mmlmn.h mmlmodict.h mmlmo.h mmlmphantom.h mmlmroot.h mmlmrow.h mmlmsqrt.h mmlmstyle.h mmlmsub.h mmlmsubsup.h mmlmsup.h mmlmtext.h mmlnode.h mmlpainter.h mmlprestok.h mmlrange.h mmltext.h mmlviewport.h nodegui.h paintersettings.h stylechanges.h mmlmtable.h mmlmtr.h mmlmtd.h
